--- a/particles-connect/canvas.html
+++ b/particles-connect/canvas.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./canvas.css" />
 </head>
-<body>
-    <div id="particle-canvas"></div>
+<body><canvas id="canvas"></canvas>
+    <div id="text">
+      <h1>Everything Connects</h1>
+    </div>
     <script src="./canvas.js"></script>
 </body>
 </html>
