--- a/robot-dance/canvas.html
+++ b/robot-dance/canvas.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./canvas.css" />
 </head>
 <body>
-    <div id="particle-canvas"></div>
+    <canvas id="canvas"></canvas>
     <script src="./canvas.js"></script>
 </body>
 </html>
